Fix vertical align in CSS for employee name

--- a/src/main/webapp/app/styles/global.css
+++ b/src/main/webapp/app/styles/global.css
@@ -3,13 +3,17 @@ ul.dropdown-menu {
 	margin: 0;
 }
 
-.employee-color {
+.employee .employee-color {
 	display: inline-block;
 	vertical-align: middle;
 	width: 16px;
 	height: 16px;
 	margin-right: 3px;
 	border-radius: 4px;
+}
+
+.employee a {
+	vertical-align: middle;
 }
 
 .color-picker-color {
